# cheap_protocol

./: CMakeLists.txt  README.md
inc/: crc32.h  errors.h  essentials.h  message.h
src/: crc32.c  essentials.c  main.c  message.c
test/: data_in.txt
